@@ -51,7 +51,7 @@ public class ConcurrentWeakHashMapTest {
     @Test
     public void testRemoveWithSame() {
         ConcurrentWeakHashMap<Integer, String> m = new ConcurrentWeakHashMap<>();
-        Integer one = new Integer(1);
+        Integer one = Integer.valueOf(1);
         m.put(one, "a");
         m.remove(one);
         assertTrue(m.isEmpty());
@@ -60,7 +60,7 @@ public class ConcurrentWeakHashMapTest {
     @Test
     public void testRemoveImpactOnKeySetAndEntrySet() {
         ConcurrentWeakHashMap<Integer, String> m = new ConcurrentWeakHashMap<>();
-        Integer one = new Integer(1);
+        Integer one = Integer.valueOf(1);
         m.put(one, "a");
         Set<Integer> keySet = m.keySet();
         Set<Entry<Integer, String>> entrySet = m.entrySet();
@@ -86,7 +86,7 @@ public class ConcurrentWeakHashMapTest {
     @Test
     public void removeThrougKeySet() {
         ConcurrentWeakHashMap<Integer, String> m = new ConcurrentWeakHashMap<>();
-        Integer one1 = new Integer(1);
+        Integer one1 = Integer.valueOf(1);
         m.put(one1, "a");
         final Set<Integer> keySet = m.keySet();
         Iterator<Integer> keySetIter = keySet.iterator();
