@@ -1,33 +1,127 @@
 package com.sap.sailing.gwt.ui.client;
 
 import java.util.Date;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
+import com.sap.sailing.domain.common.RaceTimesCalculationUtil;
 import com.sap.sailing.domain.common.RegattaAndRaceIdentifier;
-import com.sap.sailing.gwt.ui.common.client.DateAndTimeFormatterUtil;
+import com.sap.sailing.domain.common.security.SecuredDomainType.TrackedRaceActions;
 import com.sap.sailing.gwt.ui.shared.MarkPassingTimesDTO;
 import com.sap.sailing.gwt.ui.shared.RaceTimesInfoDTO;
+import com.sap.sailing.gwt.ui.shared.RaceWithCompetitorsAndBoatsDTO;
+import com.sap.sse.common.Duration;
 import com.sap.sse.common.Util;
+import com.sap.sse.common.Util.Pair;
+import com.sap.sse.gwt.client.DateAndTimeFormatterUtil;
 import com.sap.sse.gwt.client.player.TimeRangeWithZoomProvider;
 import com.sap.sse.gwt.client.player.Timer;
 import com.sap.sse.gwt.client.player.Timer.PlayModes;
 import com.sap.sse.gwt.client.player.Timer.PlayStates;
+import com.sap.sse.gwt.client.shared.components.Component;
 import com.sap.sse.gwt.client.shared.components.SettingsDialogComponent;
+import com.sap.sse.gwt.client.shared.settings.ComponentContext;
+import com.sap.sse.security.shared.dto.UserDTO;
+import com.sap.sse.security.ui.client.UserService;
+import com.sap.sse.security.ui.client.UserStatusEventHandler;
 
-public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements RaceSelectionChangeListener, RaceTimesInfoProviderListener {
+/**
+ * A specific {@link TimePanel} that shows and manages a time slider for a race. Receives {@link RaceTimesInfoDTO}
+ * objects when registered as a {@link RaceTimesInfoProviderListener} on a {@link RaceTimesInfoProvider} and adjusts the
+ * time panel including its time slider and the marks displayed and the zoom model accordingly.
+ * <p>
+ * 
+ * It is possible to register as a "transitive" {@link RaceTimesInfoProviderListener} on this object in case a component
+ * is interested in being notified when this object is done with its adjustments based on a
+ * {@link RaceTimesInfoProviderListener} notification.
+ * 
+ * @author Axel Uhl (d043530)
+ *
+ */
+public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements RaceTimesInfoProviderListener {
     private final RaceTimesInfoProvider raceTimesInfoProvider;
     
-    private RegattaAndRaceIdentifier selectedRace;
+    private final RegattaAndRaceIdentifier selectedRace;
     private boolean autoAdjustPlayMode;
     private RaceTimesInfoDTO lastRaceTimesInfo;
+    private boolean hasCanReplayDuringLiveRacesPermission = false;
+    private final UserService userService;
+    private final RaceTimePanelLifecycle componentLifecycle;
     
-    public RaceTimePanel(Timer timer, TimeRangeWithZoomProvider timeRangeProvider, StringMessages stringMessages,
-            RaceTimesInfoProvider raceTimesInfoProvider, boolean canReplayWhileLiveIsPossible) {
-        super(timer, timeRangeProvider, stringMessages, canReplayWhileLiveIsPossible);
+    /**
+     * These listeners are notified transitively after this object has been
+     * {@link RaceTimesInfoProviderListener#raceTimesInfosReceived(Map, long, Date, long) notified} about race timing
+     * changes and has finished reacting accordingly. This way, e.g., a race board mode implementation can do its
+     * thing while assuming that the time slider has already been adjusted accordingly, therefore allowing for the
+     * timer to be set to a reasonable value.
+     */
+    private final Set<RaceTimesInfoProviderListener> listeners;
+
+    private final RaceWithCompetitorsAndBoatsDTO raceDTO;
+
+    private final UserStatusEventHandler userStatusEventHandler = new UserStatusEventHandler() {
+        @Override
+        public void onUserStatusChange(UserDTO user, boolean preAuthenticated) {
+            RaceTimePanel.this.hasCanReplayDuringLiveRacesPermission = userService.hasPermission(raceDTO,
+                    TrackedRaceActions.CAN_REPLAY_DURING_LIVE_RACES);
+        }
+    };
+
+    /**
+     * When a marker update is required but min/max are not yet initialized, this flag is set. If later
+     * {@link #setMinMax(Date, Date, boolean)} is invoked and this flag is set, a {@link #redrawAllMarkers(RaceTimesInfoDTO)}
+     * will be issued and the flag is cleared.
+     */
+    private boolean redrawAllMarkersPendingForMinMaxBeingInitialized;
+    
+    private final Duration initialTimeAfterRaceStartInReplayMode;
+    
+    public RaceTimePanel(Component<?> parent, ComponentContext<?> context, RaceTimePanelLifecycle componentLifecycle,
+            UserService userService,
+            Timer timer, TimeRangeWithZoomProvider timeRangeProvider, StringMessages stringMessages,
+            RaceTimesInfoProvider raceTimesInfoProvider, boolean canReplayWhileLiveIsPossible, boolean forcePaddingRightToAlignToCharts,
+            RegattaAndRaceIdentifier selectedRaceIdentifier, Duration initialTimeAfterRaceStartInReplayMode,
+            final RaceWithCompetitorsAndBoatsDTO raceDTO) {
+        super(parent, context, timer, timeRangeProvider, stringMessages, canReplayWhileLiveIsPossible,
+                forcePaddingRightToAlignToCharts, userService, raceDTO);
+        this.raceDTO = raceDTO;
+        this.componentLifecycle = componentLifecycle;
+        this.userService = userService;
         this.raceTimesInfoProvider = raceTimesInfoProvider;
-        selectedRace = null;
+        this.listeners = new HashSet<>();
         autoAdjustPlayMode = true;
+        selectedRace = selectedRaceIdentifier;
+        this.initialTimeAfterRaceStartInReplayMode = initialTimeAfterRaceStartInReplayMode;
+        if (!raceTimesInfoProvider.containsRaceIdentifier(selectedRace)) {
+            raceTimesInfoProvider.addRaceIdentifier(selectedRace, true);
+        }
+    }
+    
+    @Override
+    protected void onLoad() {
+        super.onLoad();
+        userService.addUserStatusEventHandler(userStatusEventHandler, true);
+    }
+    
+    @Override
+    protected void onUnload() {
+        super.onUnload();
+        userService.removeUserStatusEventHandler(userStatusEventHandler);
+    }
+    
+    public void addRaceTimesInfoProviderListener(RaceTimesInfoProviderListener listener) {
+        this.listeners.add(listener);
+    }
+    
+    public void removeRaceTimesInfoProviderListener(RaceTimesInfoProviderListener listener) {
+        this.listeners.remove(listener);
+    }
+    
+    @Override
+    protected boolean canReplayWhileLiveIsPossible() {
+        return this.hasCanReplayDuringLiveRacesPermission;
     }
     
     /**
@@ -37,8 +131,8 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
     protected String getTimeToStartLabelText(Date time) {
         String result = null;
         RaceTimesInfoDTO selectedRaceTimes = raceTimesInfoProvider.getRaceTimesInfo(selectedRace);
-        if (selectedRaceTimes.startOfRace != null) {
-            if(time.before(selectedRaceTimes.startOfRace) || time.equals(selectedRaceTimes.startOfRace)) {
+        if (selectedRaceTimes != null && selectedRaceTimes.startOfRace != null) {
+            if (time.before(selectedRaceTimes.startOfRace) || time.equals(selectedRaceTimes.startOfRace)) {
                 long timeToStartInMs = selectedRaceTimes.startOfRace.getTime() - time.getTime();
                 result = timeToStartInMs < 1000 ? stringMessages.start() : stringMessages.timeToStart(DateAndTimeFormatterUtil.formatElapsedTime(timeToStartInMs));
             } else {
@@ -57,15 +151,16 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
 
     @Override
     public RaceTimePanelSettings getSettings() {
-        RaceTimePanelSettings result = new RaceTimePanelSettings();
-        result.setRefreshInterval(timer.getRefreshInterval());
-        result.setRaceTimesInfo(raceTimesInfoProvider.getRaceTimesInfo(selectedRace));
-        return result;
+        return new RaceTimePanelSettings(timer.getRefreshInterval());
     }
 
     @Override
-    public SettingsDialogComponent<RaceTimePanelSettings> getSettingsDialogComponent() {
-        return new RaceTimePanelSettingsDialogComponent(getSettings(), stringMessages);
+    public SettingsDialogComponent<RaceTimePanelSettings> getSettingsDialogComponent(RaceTimePanelSettings settings) {
+        return componentLifecycle.getSettingsDialogComponent(settings);
+    }
+    
+    public RaceTimesInfoDTO getLastRaceTimesInfo() {
+        return lastRaceTimesInfo;
     }
 
     private void updateTimeInfo(RaceTimesInfoDTO raceTimesInfo) {
@@ -76,7 +171,7 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
             // timer will only accept this update if the delay hasn't been updated explicitly
             timer.setLivePlayDelayInMillis(raceTimesInfo.delayToLiveInMs);
             if ((raceTimesInfo.startOfTracking != null || raceTimesInfo.startOfRace != null) && 
-                    (raceTimesInfo.newestTrackingEvent != null || raceTimesInfo.endOfRace != null)) {
+                    (raceTimesInfo.newestTrackingEvent != null || raceTimesInfo.endOfRace != null || raceTimesInfo.endOfTracking != null)) {
                 // we set here the min and max of the time slider, the start and end of the race as well as the known
                 // leg markers
                 boolean liveModeToBeMadePossible = isLiveModeToBeMadePossible();
@@ -105,7 +200,7 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
                 // maybe show a special state for this like "Race did not start yet"
             }
         }
-        lastRaceTimesInfo = raceTimesInfo;
+        lastRaceTimesInfo = raceTimesInfo; // TODO bug 3122: when not redrawn yet because min/max not initialized yet, further redraw is disabled by this.
     } 
     
     @Override
@@ -114,41 +209,65 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
         timeSlider.setZoomed(true);
         setMinMax(zoomStartTimepoint, zoomEndTimepoint, false);
         timeSlider.clearMarkersAndLabelsAndTicks();
-        redrawAllMarkers(lastRaceTimesInfo);
+        if (lastRaceTimesInfo != null) {
+            redrawAllMarkers(lastRaceTimesInfo);
+        }
     }
 
     @Override
     public void onTimeZoomReset() {
         super.onTimeZoomReset();
         timeSlider.setZoomed(false);
-        timeSlider.setMinValue(new Double(timeRangeProvider.getFromTime().getTime()), false);
-        timeSlider.setMaxValue(new Double(timeRangeProvider.getToTime().getTime()), false);
-        timeSlider.setCurrentValue(new Double(timer.getTime().getTime()), true);
+        timeSlider.setMinValue(Double.valueOf(timeRangeProvider.getFromTime().getTime()), false);
+        timeSlider.setMaxValue(Double.valueOf(timeRangeProvider.getToTime().getTime()), false);
+        timeSlider.setCurrentValue(Double.valueOf(timer.getTime().getTime()), true);
         timeSlider.clearMarkersAndLabelsAndTicks();
-        redrawAllMarkers(lastRaceTimesInfo);
+        if (lastRaceTimesInfo != null) {
+            redrawAllMarkers(lastRaceTimesInfo);
+        }
     }
 
+    /**
+     * If and only if the {@link #selectedRace}'s timing is described by the {@link #raceTimesInfoProvider} and
+     * according to the timing the current live time point is after the start of tracking or at least after
+     * {@link RaceTimesCalculationUtil.MIN_TIME_BEFORE_RACE_START} minutes before the race, and the current live time
+     * point is not after the end of tracking then live mode will be made possible (<code>true</code> will be returned).<p>
+     * 
+     * Bug 3482: when startOfTracking and endOfTracking are both {@code null} it would be good to check for the
+     * {@link RaceTimesInfoDTO#newestTrackingEvent} and {@link RaceTimesInfoDTO#endOfRace} values to see if---with
+     * a little leeway---an end for the live period may be determined. Without this logic, such races would remain
+     * live until the end of time.
+     */
     @Override
     protected boolean isLiveModeToBeMadePossible() {
-        long eventTimeoutTolerance = 60 * 1000; // 60s
-        long timeBeforeRaceStartTolerance = 3 * 60 * 1000; // 3min
-        long liveTimePointInMillis = timer.getLiveTimePointInMillis();
-        RaceTimesInfoDTO lastRaceTimesInfo = raceTimesInfoProvider != null ? raceTimesInfoProvider.getRaceTimesInfo(selectedRace) : null;
-        return lastRaceTimesInfo != null &&
-                lastRaceTimesInfo.newestTrackingEvent != null &&
-                liveTimePointInMillis < lastRaceTimesInfo.newestTrackingEvent.getTime() + eventTimeoutTolerance &&
-                ((lastRaceTimesInfo.startOfTracking != null && liveTimePointInMillis > lastRaceTimesInfo.startOfTracking.getTime())||
-                 (lastRaceTimesInfo.startOfRace != null && liveTimePointInMillis > lastRaceTimesInfo.startOfRace.getTime() - timeBeforeRaceStartTolerance));
-    }
-    
-    @Override
-    public void onRaceSelectionChange(List<RegattaAndRaceIdentifier> selectedRaces) {
-        if (selectedRaces != null && !selectedRaces.isEmpty()) {
-            selectedRace = selectedRaces.iterator().next();
-            if (!raceTimesInfoProvider.containsRaceIdentifier(selectedRace)) {
-                raceTimesInfoProvider.addRaceIdentifier(selectedRace, true);
-            }
+        RaceTimesInfoDTO lastRaceTimesInfo = raceTimesInfoProvider != null
+                ? raceTimesInfoProvider.getRaceTimesInfo(selectedRace)
+                : null;
+        if (lastRaceTimesInfo == null) return false;
+
+        Date timePoint = timer.getLiveTimePointAsDate();
+        Pair<Date, Date> minMax = RaceTimesCalculationUtil.calculateRaceMinMax(timer.getLiveTimePointAsDate(),
+                lastRaceTimesInfo.startOfTracking, lastRaceTimesInfo.startOfRace, lastRaceTimesInfo.raceFinishingTime,
+                lastRaceTimesInfo.raceFinishedTime, lastRaceTimesInfo.endOfRace, lastRaceTimesInfo.endOfTracking);
+        Date min = minMax.getA();
+        Date max = minMax.getB();
+
+        // Bug 3482: try to determine a value for max if max is null
+        if (max == null && lastRaceTimesInfo.newestTrackingEvent != null) {
+            max = new Date(lastRaceTimesInfo.newestTrackingEvent.getTime() + RaceTimesCalculationUtil.TIME_AFTER_LIVE);
         }
+
+        // Assume we are live (no end known as of now)
+        boolean beforeEnd = true;
+        if (max != null) {
+            beforeEnd = !timePoint.after(max);
+        }
+
+        if (min != null) {
+            // min < timePoint < max; max might be unknown as of now
+            return !timePoint.before(min) && beforeEnd;
+        }
+        return beforeEnd;
     }
     
     @Override
@@ -170,17 +289,30 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
      * was <code>null</code> before, or extended to a later point in time.
      */
     private void updateMinMax(RaceTimesInfoDTO newRaceTimesInfo) {
-        Util.Pair<Date, Date> raceMinMax = RaceTimesCalculationUtil.caluclateRaceMinMax(timer, newRaceTimesInfo);
+        Util.Pair<Date, Date> raceMinMax = RaceTimesCalculationUtil.calculateRaceMinMax(timer.getLiveTimePointAsDate(),
+                newRaceTimesInfo.startOfTracking, newRaceTimesInfo.startOfRace, newRaceTimesInfo.raceFinishingTime,
+                newRaceTimesInfo.raceFinishedTime, newRaceTimesInfo.endOfRace, newRaceTimesInfo.endOfTracking);
         
         Date min = raceMinMax.getA();
         Date max = raceMinMax.getB();
         
         // never reduce max if it was already set
-        if (min != null && max != null && (getToTime() == null || getToTime().before(max))) {
+        if (min != null && max != null &&
+                (getToTime() == null || getToTime().before(max) ||
+                 getFromTime() == null || getFromTime().after(min))) {
             setMinMax(min, max, /* fireEvent */ false); // no event because we guarantee time to be between min and max
         }
     }
     
+    @Override
+    public void setMinMax(Date min, Date max, boolean fireEvent) {
+        super.setMinMax(min, max, fireEvent);
+        if (redrawAllMarkersPendingForMinMaxBeingInitialized && timeSlider.isMinMaxInitialized()) {
+            redrawAllMarkers(lastRaceTimesInfo);
+            redrawAllMarkersPendingForMinMaxBeingInitialized = false;
+        }
+    }
+
     /**
      * When in {@link PlayModes#Replay} mode, tries to put the {@link #timer} to the time point when the last leg was
      * finished first. If this time point is not (yet?) known, tries to put the {@link #timer} to the
@@ -205,7 +337,11 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
         case Replay:
             // set time to start of race
             if (newRaceTimesInfo.startOfRace != null) {
-                timer.setTime(newRaceTimesInfo.startOfRace.getTime());
+                timer.setTime(newRaceTimesInfo.startOfRace.getTime() +
+                        (initialTimeAfterRaceStartInReplayMode == null ? 0l : initialTimeAfterRaceStartInReplayMode.asMillis()));
+            } else if (newRaceTimesInfo.startOfTracking != null) {
+                timer.setTime(newRaceTimesInfo.startOfTracking.getTime() +
+                        (initialTimeAfterRaceStartInReplayMode == null ? 0l : initialTimeAfterRaceStartInReplayMode.asMillis()));
             }
             break;
         }
@@ -226,21 +362,18 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
                     break;
                 }
             }
-            if ((lastRaceTimesInfo.startOfRace == null && newRaceTimesInfo.startOfRace != null)
-                    || (lastRaceTimesInfo.startOfRace != null && newRaceTimesInfo.startOfRace == null)
-                    || (lastRaceTimesInfo.startOfRace != null && newRaceTimesInfo.startOfRace != null
-                    && lastRaceTimesInfo.startOfRace.getTime() != newRaceTimesInfo.startOfRace.getTime())) {
-                requiresMarkerUpdate = true;
-            }
-            if ((lastRaceTimesInfo.endOfRace == null && newRaceTimesInfo.endOfRace != null)
-                    || (lastRaceTimesInfo.endOfRace != null && newRaceTimesInfo.endOfRace == null)
-                    || (lastRaceTimesInfo.endOfRace != null && newRaceTimesInfo.endOfRace != null
-                    && lastRaceTimesInfo.endOfRace.getTime() != newRaceTimesInfo.endOfRace.getTime())) {
+            if (!requiresMarkerUpdate &&
+                (!Util.equalsWithNull(lastRaceTimesInfo.startOfRace, newRaceTimesInfo.startOfRace) ||
+                 !Util.equalsWithNull(lastRaceTimesInfo.endOfRace, newRaceTimesInfo.endOfRace))) {
                 requiresMarkerUpdate = true;
             }
         }
-        if (requiresMarkerUpdate && timeSlider.isMinMaxInitialized()) {
-            redrawAllMarkers(newRaceTimesInfo);
+        if (requiresMarkerUpdate) {
+            if (timeSlider.isMinMaxInitialized()) { // TODO bug 3122 later, the lastRaceTimesInfo will be updated even if not redrawn because min/max not initialized
+                redrawAllMarkers(newRaceTimesInfo);
+            } else {
+                redrawAllMarkersPendingForMinMaxBeingInitialized = true;
+            }
         }
     }
     
@@ -250,7 +383,7 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
         if (newRaceTimesInfo.startOfRace != null) {
             long markerTime = newRaceTimesInfo.startOfRace.getTime();
             if (!timeSlider.isZoomed() || (timeSlider.isZoomed() && markerTime > timeSlider.getMinValue() && markerTime < timeSlider.getMaxValue())) {
-                timeSlider.addMarker("S", new Double(markerTime));
+                timeSlider.addMarker("S", Double.valueOf(markerTime));
             }
         }
         int markPassingCounter = 1;
@@ -259,15 +392,19 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
             if (markPassingCounter > 1 && markPassingTimesDTO.firstPassingDate != null) {
                 long markerTime = markPassingTimesDTO.firstPassingDate.getTime();
                 if (!timeSlider.isZoomed() || (timeSlider.isZoomed() && markerTime > timeSlider.getMinValue() && markerTime < timeSlider.getMaxValue())) {
-                    timeSlider.addMarker(markPassingTimesDTO.getName(), new Double(markerTime));
+                    timeSlider.addMarker(markPassingTimesDTO.getName(), Double.valueOf(markerTime));
                 }
             }
             markPassingCounter++;
         }
         if (newRaceTimesInfo.endOfRace != null) {
             long markerTime = newRaceTimesInfo.endOfRace.getTime();
+            // If there is a "blue flag down" event after endOfRace use it instead to show the E marker
+            if (newRaceTimesInfo.getFinishedTime() != null) {
+                markerTime = newRaceTimesInfo.getFinishedTime().getTime();
+            }
             if (!timeSlider.isZoomed() || (timeSlider.isZoomed() && markerTime > timeSlider.getMinValue() && markerTime < timeSlider.getMaxValue())) {
-                timeSlider.addMarker("E", new Double(markerTime));
+                timeSlider.addMarker("E", Double.valueOf(markerTime));
             }
         }
         timeSlider.redraw(); 
@@ -277,5 +414,13 @@ public class RaceTimePanel extends TimePanel<RaceTimePanelSettings> implements R
     public void raceTimesInfosReceived(Map<RegattaAndRaceIdentifier, RaceTimesInfoDTO> raceTimesInfos, long clientTimeWhenRequestWasSent, Date serverTimeDuringRequest, long clientTimeWhenResponseWasReceived) {
         timer.adjustClientServerOffset(clientTimeWhenRequestWasSent, serverTimeDuringRequest, clientTimeWhenResponseWasReceived);
         updateTimeInfo(raceTimesInfos.get(selectedRace));
+        for (final RaceTimesInfoProviderListener listener : listeners) {
+            listener.raceTimesInfosReceived(raceTimesInfos, clientTimeWhenRequestWasSent, serverTimeDuringRequest, clientTimeWhenResponseWasReceived);
+        }
+    }
+    
+    @Override
+    public String getId() {
+        return componentLifecycle.getComponentId();
     }
 }
