@@ -6,6 +6,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Set;
 
 import org.moxieapps.gwt.highcharts.client.Axis;
@@ -42,9 +43,9 @@ import com.google.gwt.user.client.ui.RequiresResize;
 import com.google.gwt.user.client.ui.Widget;
 import com.sap.sailing.domain.common.RegattaAndRaceIdentifier;
 import com.sap.sailing.domain.common.WindSource;
+import com.sap.sailing.domain.common.WindSourceType;
 import com.sap.sailing.domain.common.impl.ColorMapImpl;
 import com.sap.sailing.gwt.ui.actions.GetWindInfoAction;
-import com.sap.sailing.gwt.ui.client.RaceSelectionProvider;
 import com.sap.sailing.gwt.ui.client.SailingServiceAsync;
 import com.sap.sailing.gwt.ui.client.StringMessages;
 import com.sap.sailing.gwt.ui.client.WindSourceTypeFormatter;
@@ -60,13 +61,15 @@ import com.sap.sse.gwt.client.player.Timer.PlayModes;
 import com.sap.sse.gwt.client.shared.components.Component;
 import com.sap.sse.gwt.client.shared.components.SettingsDialog;
 import com.sap.sse.gwt.client.shared.components.SettingsDialogComponent;
+import com.sap.sse.gwt.client.shared.settings.ComponentContext;
 
-public class WindChart extends AbstractRaceChart implements Component<WindChartSettings>, RequiresResize {
-    public static final String LODA_WIND_CHART_DATA_CATEGORY = "loadWindChartData";
+public class WindChart extends AbstractRaceChart<WindChartSettings> implements RequiresResize {
+    public static final String LOAD_WIND_CHART_DATA_CATEGORY = "loadWindChartData";
     
     private static final int LINE_WIDTH = 1;
 
     private final WindChartSettings settings;
+    private final WindChartLifecycle windChartLifecycle;
     
     /**
      * Holds one series for each wind source for which data has been received.
@@ -82,16 +85,24 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
 
     private final ColorMapImpl<WindSource> colorMap;
 
+    private WindSource preselectFilter;
+
     /**
-     * @param raceSelectionProvider
+     * @param selectedRaceIdentifier
      *            if <code>null</code>, this chart won't update its contents automatically upon race selection change;
      *            otherwise, whenever the selection changes, the wind data of the race selected now is loaded from the
-     *            server and displayed in this chart. If no race is selected, the chart is cleared.
+     *            server and displayed in this chart. If no race is selected, the chart is cleared. The caller of this
+     *            constructor must ensure to trigger {@link RaceSelectionChangeListener#onRaceSelectionChange(List)} at
+     *            least once to ensure that this chart sets its {@link AbstractRaceChart#selectedRaceIdentifier} field.
      */
-    public WindChart(SailingServiceAsync sailingService, RaceSelectionProvider raceSelectionProvider, Timer timer,
+    public WindChart(Component<?> parent, ComponentContext<?> context, WindChartLifecycle windChartLifecycle,
+            SailingServiceAsync sailingService,
+            RegattaAndRaceIdentifier selectedRaceIdentifier, Timer timer,
             TimeRangeWithZoomProvider timeRangeWithZoomProvider, WindChartSettings settings, final StringMessages stringMessages, 
             AsyncActionsExecutor asyncActionsExecutor, ErrorReporter errorReporter, boolean compactChart) {
-        super(sailingService, timer, timeRangeWithZoomProvider, stringMessages, asyncActionsExecutor, errorReporter);
+        super(parent, context, sailingService, selectedRaceIdentifier, timer, timeRangeWithZoomProvider, stringMessages,
+                asyncActionsExecutor, errorReporter);
+        this.windChartLifecycle = windChartLifecycle;
         this.settings = settings;
         windSourceDirectionSeries = new HashMap<WindSource, Series>();
         windSourceSpeedSeries = new HashMap<WindSource, Series>();
@@ -101,6 +112,7 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
         colorMap = new ColorMapImpl<WindSource>();
         chart = new Chart()
                 .setPersistent(true)
+                .setReflow(false)
                 .setZoomType(BaseChart.ZoomType.X)
                 .setMarginLeft(65)
                 .setMarginRight(65)
@@ -112,8 +124,9 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
                 .setBackgroundColor(new Color("#FFFFFF"))
                 .setPlotBackgroundColor("#f8f8f8")
                 .setPlotBorderWidth(0)
+                .setAlignTicks(false)
                 .setCredits(new Credits().setEnabled(false))
-                .setChartTitle(new ChartTitle().setText(stringMessages.wind()))
+                .setChartTitle(new ChartTitle().setText(stringMessages.wind()).setOption("floating",true))
                 .setChartSubtitle(new ChartSubtitle().setText(stringMessages.clickAndDragToZoomIn()))
                 .setLinePlotOptions(new LinePlotOptions().setLineWidth(LINE_WIDTH).setMarker(
                         new Marker().setEnabled(false).setHoverState(
@@ -174,20 +187,27 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
                     @Override
                     public String format(AxisLabelsData axisLabelsData) {
                         long value = axisLabelsData.getValueAsLong() % 360;
-                        return new Long(value < 0 ? value + 360 : value).toString();
+                        return Long.valueOf(value < 0 ? value + 360 : value).toString();
                     }
                 }));
         chart.getYAxis(1).setOpposite(true).setAxisTitleText(stringMessages.speed()+" ("+stringMessages.knotsUnit()+")").setMin(0)
             .setMaxPadding(0.05).setStartOnTick(false).setGridLineWidth(0).setMinorGridLineWidth(0);
         if (compactChart) {
-            chart.setSpacingBottom(10).setSpacingLeft(10).setSpacingRight(10).setSpacingTop(2)
+            chart.setSpacingBottom(10).setSpacingLeft(10).setSpacingRight(10).setSpacingTop(20)
                  .setOption("legend/margin", 2)
                  .setOption("title/margin", 5)
                  .setChartSubtitle(null)
                  .getXAxis().setAxisTitle(null);
         }
         setSize("100%", "100%");
-        raceSelectionProvider.addRaceSelectionChangeListener(this);
+        if (selectedRaceIdentifier != null) {
+            clearCacheAndReload();
+            if (isVisible()) {
+                updateVisibleSeries();
+            }
+        } else {
+            clearChart();
+        }
     }
     
     @Override
@@ -198,7 +218,7 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
 
     @Override
     public String getLocalizedShortName() {
-        return stringMessages.wind();
+        return windChartLifecycle.getLocalizedShortName();
     }
 
     @Override
@@ -207,55 +227,72 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
     }
 
     private void updateVisibleSeries() {
-        List<Series> currentSeries = Arrays.asList(chart.getSeries());
-        Set<Series> visibleSeries = new HashSet<Series>(currentSeries);
-        
-        if (settings.isShowWindDirectionsSeries()) {
-            for (Map.Entry<WindSource, Series> e : windSourceDirectionSeries.entrySet()) {
-                Series series = e.getValue();
-                if (settings.getWindDirectionSourcesToDisplay().contains(e.getKey().getType())) {
-                    if (!visibleSeries.contains(series)) {
-                        chart.addSeries(series, false, false);
-                        series.select(true); // ensures that the checkbox will be ticked
-                    }
-                } else {
-                    if (visibleSeries.contains(series)) {
-                        chart.removeSeries(series, false);
-                    }
-                }
-            }
+        final Set<Series> visibleSeries = new HashSet<Series>(Arrays.asList(chart.getSeries()));
+
+        if (preselectFilter != null) {
+            forceSeriesSelection(visibleSeries, windSourceDirectionSeries);
+            forceSeriesSelection(visibleSeries, windSourceSpeedSeries);
         } else {
-            for (Map.Entry<WindSource, Series> e : windSourceDirectionSeries.entrySet()) {
-                Series series = e.getValue();
-                if (visibleSeries.contains(series)) {
-                    chart.removeSeries(series, false);
-                }
-            }
+            final boolean showDirectionSeries = settings.isShowWindDirectionsSeries();
+            final Set<WindSourceType> directionSourceTypesToDisplay = settings.getWindDirectionSourcesToDisplay();
+            updateSeries(visibleSeries, windSourceDirectionSeries, showDirectionSeries, directionSourceTypesToDisplay);
+            final boolean showSpeedSeries = settings.isShowWindSpeedSeries();
+            final Set<WindSourceType> speedSourceTypesToDisplay = settings.getWindSpeedSourcesToDisplay();
+            updateSeries(visibleSeries, windSourceSpeedSeries, showSpeedSeries, speedSourceTypesToDisplay);
         }
 
-        if (settings.isShowWindSpeedSeries()) {
-            for (Map.Entry<WindSource, Series> e : windSourceSpeedSeries.entrySet()) {
-                Series series = e.getValue();
-                if (settings.getWindSpeedSourcesToDisplay().contains(e.getKey().getType())) {
+        onResize();
+    }
+
+    private void updateSeries(final Set<Series> visibleSeries, final Map<WindSource, Series> windSourceToSeriesMap,
+            final boolean showSeries, final Set<WindSourceType> windSourceTypesToDisplay) {
+        if (showSeries) {
+            for (Entry<WindSource, Series> entry : windSourceToSeriesMap.entrySet()) {
+                final Series series = entry.getValue();
+                if (windSourceTypesToDisplay.contains(entry.getKey().getType())) {
                     if (!visibleSeries.contains(series)) {
                         chart.addSeries(series, false, false);
-                        series.select(true); // ensures that the checkbox will be ticked
                     }
-                } else {
-                    if (visibleSeries.contains(series)) {
-                        chart.removeSeries(series, false);
-                    }
+                } else if (visibleSeries.contains(series)) {
+                    chart.removeSeries(series, false);
                 }
             }
         } else {
-            for (Map.Entry<WindSource, Series> e : windSourceSpeedSeries.entrySet()) {
-                Series series = e.getValue();
+            for (Entry<WindSource, Series> entry : windSourceToSeriesMap.entrySet()) {
+                final Series series = entry.getValue();
                 if (visibleSeries.contains(series)) {
                     chart.removeSeries(series, false);
                 }
             }
         }
-        onResize();
+    }
+
+    private boolean forceSeriesSelection(Set<Series> visibleSeries, Map<WindSource, Series> toProcess) {
+        boolean wasInResult = false;
+        for (Map.Entry<WindSource, Series> e : toProcess.entrySet()) {
+            Series series = e.getValue();
+            WindSource seriesSource = e.getKey();
+            // add all of type, remove non matching ones
+            if (seriesSource.getType().equals(preselectFilter.getType())) {
+                if (!visibleSeries.contains(series)) {
+                    chart.addSeries(series, true, false);
+                }
+                // preselet the matching one
+                if (preselectFilter.equals(e.getKey())) {
+                    wasInResult = true;
+                    series.select(true); // ensures that the checkbox will be ticked
+                    series.setVisible(true, true);
+                } else {
+                    series.select(false);
+                    series.setVisible(false, true);
+                }
+            } else {
+                if (visibleSeries.contains(series)) {
+                    chart.removeSeries(series, false);
+                }
+            }
+        }
+        return wasInResult;
     }
 
     /**
@@ -350,9 +387,9 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
                 if (newMaxTimepoint == null || wind.requestTimepoint > newMaxTimepoint) {
                     newMaxTimepoint = wind.requestTimepoint;
                 }
-     
-                if ((timeOfEarliestRequestInMillis == null || wind.requestTimepoint < timeOfEarliestRequestInMillis) || 
-                    timeOfLatestRequestInMillis == null || wind.requestTimepoint > timeOfLatestRequestInMillis) {
+                //if we are in non appending mode, the data is the truth, use all of it without filtering
+                if (!append || ((timeOfEarliestRequestInMillis == null || wind.requestTimepoint < timeOfEarliestRequestInMillis) || 
+                    timeOfLatestRequestInMillis == null || wind.requestTimepoint > timeOfLatestRequestInMillis)) {
                     Point newDirectionPoint = new Point(wind.requestTimepoint, wind.dampenedTrueWindFromDeg);
                     if (wind.dampenedTrueWindSpeedInKnots != null) {
                         String name = numberFormat.format(wind.dampenedTrueWindSpeedInKnots)+ stringMessages.knotsUnit();
@@ -393,10 +430,10 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
                 newDirectionPoints = directionPoints;
                 newSpeedPoints = speedPoints;
             }
-            setSeriesPoints(directionSeries, newDirectionPoints);
+            setSeriesPoints(directionSeries, newDirectionPoints, /* manageZoom */ true);
             windSourceDirectionPoints.put(windSource, newDirectionPoints);
             if (windSource.getType().useSpeed()) {
-                setSeriesPoints(speedSeries, newSpeedPoints);
+                setSeriesPoints(speedSeries, newSpeedPoints, /* manageZoom */ true);
                 windSourceSpeedPoints.put(windSource, newSpeedPoints);
             }
             
@@ -411,14 +448,12 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
 
     @Override
     public boolean hasSettings() {
-        return true;
+        return windChartLifecycle.hasSettings();
     }
 
     @Override
-    public SettingsDialogComponent<WindChartSettings> getSettingsDialogComponent() {
-        WindChartSettings windChartSettings = new WindChartSettings(settings.isShowWindSpeedSeries(), settings.getWindSpeedSourcesToDisplay(),
-                settings.isShowWindDirectionsSeries(), settings.getWindDirectionSourcesToDisplay(), settings.getResolutionInMilliseconds());
-        return new WindChartSettingsDialogComponent(windChartSettings, stringMessages);
+    public SettingsDialogComponent<WindChartSettings> getSettingsDialogComponent(WindChartSettings settings) {
+        return windChartLifecycle.getSettingsDialogComponent(settings);
     }
 
     /**
@@ -427,15 +462,24 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
      */
     @Override
     public void updateSettings(WindChartSettings newSettings) {
+        preselectFilter = null;
+        boolean clearCacheAndReload = false;
+        final Set<String> oldWindSourceTypesToRequest = getNamesOfWindSourceTypesOfWhichToDisplaySpeedOrDirection();
         if (newSettings.getResolutionInMilliseconds() != settings.getResolutionInMilliseconds()) {
             settings.setResolutionInMilliseconds(newSettings.getResolutionInMilliseconds());
-            clearCacheAndReload();
+            clearCacheAndReload = true;
         }
         settings.setShowWindDirectionsSeries(newSettings.isShowWindDirectionsSeries());
         settings.setWindDirectionSourcesToDisplay(newSettings.getWindDirectionSourcesToDisplay());
 
         settings.setShowWindSpeedSeries(newSettings.isShowWindSpeedSeries());
         settings.setWindSpeedSourcesToDisplay(newSettings.getWindSpeedSourcesToDisplay());
+        if (!oldWindSourceTypesToRequest.equals(getNamesOfWindSourceTypesOfWhichToDisplaySpeedOrDirection())) {
+            clearCacheAndReload = true;
+        }
+        if (clearCacheAndReload) {
+            clearCacheAndReload();
+        }
         updateVisibleSeries();
     }
 
@@ -445,7 +489,6 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
         windSourceDirectionPoints.clear();
         windSourceSpeedPoints.clear();
         firstPointOfFirstSeries = null;
-        
         loadData(timeRangeWithZoomProvider.getFromTime(), timeRangeWithZoomProvider.getToTime(), /* append */false);
     }
 
@@ -458,13 +501,17 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
         if (isVisible()) {
             if (selectedRaceIdentifier == null) {
                 clearChart();
-            } else if (needsDataLoading() && from != null && to != null) {
+            } else if (from != null && to != null) {
                 setWidget(chart);
-                showLoading("Loading wind data...");
+                // if not playing or empty show loading message
+                if (shouldShowLoading(timeOfLatestRequestInMillis)) {
+                    showLoading(stringMessages.windChartLoading());
+                }
                 GetWindInfoAction getWindInfoAction = new GetWindInfoAction(sailingService, selectedRaceIdentifier,
-                        from, to, settings.getResolutionInMilliseconds(), null, /* onlyUpToNewestEvent==true because we don't want
+                        from, to, settings.getResolutionInMilliseconds(), getNamesOfWindSourceTypesOfWhichToDisplaySpeedOrDirection(),
+                        /* onlyUpToNewestEvent==true because we don't want
                         to overshoot the evidence so far */ true);
-                asyncActionsExecutor.execute(getWindInfoAction, LODA_WIND_CHART_DATA_CATEGORY,
+                asyncActionsExecutor.execute(getWindInfoAction, LOAD_WIND_CHART_DATA_CATEGORY,
                         new AsyncCallback<WindInfoForRaceDTO>() {
                             @Override
                             public void onSuccess(WindInfoForRaceDTO result) {
@@ -490,25 +537,19 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
         }
     }
     
-    private void clearChart() {
-        chart.removeAllSeries();
+    private Set<String> getNamesOfWindSourceTypesOfWhichToDisplaySpeedOrDirection() {
+        final Set<String> result = new HashSet<>();
+        for (WindSourceType speedType : getSettings().getWindSpeedSourcesToDisplay()) {
+            result.add(speedType.name());
+        }
+        for (WindSourceType speedType : getSettings().getWindDirectionSourcesToDisplay()) {
+            result.add(speedType.name());
+        }
+        return result;
     }
 
-    @Override
-    public void onRaceSelectionChange(List<RegattaAndRaceIdentifier> selectedRaces) {
-        if (selectedRaces != null && !selectedRaces.isEmpty()) {
-            selectedRaceIdentifier = selectedRaces.iterator().next();
-        } else {
-            selectedRaceIdentifier = null;
-        }
-        
-        if(selectedRaceIdentifier != null) {
-            clearCacheAndReload();
-            if(isVisible())
-                updateVisibleSeries();
-        } else {
-            clearChart();
-        }
+    private void clearChart() {
+        chart.removeAllSeries();
     }
 
     /**
@@ -518,47 +559,38 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
      */
     @Override
     public void timeChanged(Date newTime, Date oldTime) {
-        if(!isVisible()) {
-            return;
-        }
-
-        updateTimePlotLine(newTime);
-        
-        switch(timer.getPlayMode()) {
-            case Live:
-            {
-                // is date before first cache entry or is cache empty?
-                if (timeOfEarliestRequestInMillis == null || newTime.getTime() < timeOfEarliestRequestInMillis) {
-                    loadData(timeRangeWithZoomProvider.getFromTime(), newTime, /* append */ true);
-                } else if (newTime.getTime() > timeOfLatestRequestInMillis) {
-                    loadData(new Date(timeOfLatestRequestInMillis), timeRangeWithZoomProvider.getToTime(), /* append */true);
-                }
-                // otherwise the cache spans across date and so we don't need to load anything
-                break;
-            }
-            case Replay:
-            {
-                if (timeOfLatestRequestInMillis == null) {
-                    // pure replay mode
-                    loadData(timeRangeWithZoomProvider.getFromTime(), timeRangeWithZoomProvider.getToTime(), /* append */false);
-                } else {
-                    // replay mode during live play
+        if (isVisible()) {
+            updateTimePlotLine(newTime);
+            switch (timer.getPlayMode()) {
+                case Live:
+                {
+                    // is date before first cache entry or is cache empty?
                     if (timeOfEarliestRequestInMillis == null || newTime.getTime() < timeOfEarliestRequestInMillis) {
                         loadData(timeRangeWithZoomProvider.getFromTime(), newTime, /* append */ true);
                     } else if (newTime.getTime() > timeOfLatestRequestInMillis) {
-                        loadData(new Date(timeOfLatestRequestInMillis), newTime, /* append */true);
-                    }                    
+                        loadData(new Date(timeOfLatestRequestInMillis), timeRangeWithZoomProvider.getToTime(), /* append */true);
+                    }
+                    // otherwise the cache spans across date and so we don't need to load anything
+                    break;
                 }
-                break;
+                case Replay:
+                {
+                    if (timeOfLatestRequestInMillis == null) {
+                        // pure replay mode
+                        loadData(timeRangeWithZoomProvider.getFromTime(), timeRangeWithZoomProvider.getToTime(), /* append */false);
+                    } else {
+                        // replay mode during live play
+                        if (timeOfEarliestRequestInMillis == null || newTime.getTime() < timeOfEarliestRequestInMillis) {
+                            loadData(timeRangeWithZoomProvider.getFromTime(), newTime, /* append */ true);
+                        } else if (newTime.getTime() > timeOfLatestRequestInMillis) {
+                            loadData(new Date(timeOfLatestRequestInMillis), newTime, /* append */true);
+                        }                    
+                    }
+                    break;
+                }
             }
         }
      }
-
-    private void updateTimePlotLine(Date date) {
-        chart.getXAxis().removePlotLine(timePlotLine);
-        timePlotLine.setValue(date.getTime());
-        chart.getXAxis().addPlotLines(timePlotLine);
-    }
 
     @Override
     public void onResize() {
@@ -568,10 +600,6 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
         chart.redraw();
     }
 
-    private boolean needsDataLoading() {
-        return isVisible();
-    }
-    
     /**
      * Prints basic data and points of a WindInfoForRaceDTO object to a formatted string.
      * Can be used for debugging
@@ -640,5 +668,29 @@ public class WindChart extends AbstractRaceChart implements Component<WindChartS
     public String getDependentCssClassName() {
         return "windChart";
     }
-    
+
+    @Override
+    public WindChartSettings getSettings() {
+        return settings;
+    }
+
+    @Override
+    public String getId() {
+        return windChartLifecycle.getComponentId();
+    }
+
+    /**
+     * Forces the display of a specific windProvider preselected, and all of same type unselected. Will be disabled by either updateSettings or once the provider was properly found and shown
+     */
+    public void showProvider(WindSource windprovider) {
+        WindSourceType type = windprovider.getType();
+        Set<WindSourceType> windSpeedSourcesToDisplay = new HashSet<>();
+        Set<WindSourceType> windDirectionSourcesToDisplay = new HashSet<>();
+        windSpeedSourcesToDisplay.add(type);
+        windDirectionSourcesToDisplay.add(type);
+        WindChartSettings patched = new WindChartSettings(true,windSpeedSourcesToDisplay,true,windDirectionSourcesToDisplay,settings.getResolutionInMilliseconds());
+        updateSettings(patched);
+        preselectFilter = windprovider;
+        updateVisibleSeries();
+    }
 }
